Avoid button text+image break in two lines

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -112,6 +112,7 @@ fieldset[disabled] .pmpro_btn {
     cursor: pointer;
     font-size: 12px;
     user-select: none;
+    display: inline;
 }
 
 input[type="button"]#discount_code_button,
